[package]
name = "escher-rs"
version = "0.1.0"
authors = ["Luiz Parreira <luiz@bipa.app>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "escher"

[main]
name = "main"

[dependencies]
reqwest = { version = "0.10.6", features = ["json", "blocking"]}
chrono = { version = "0.4.11", features = ["serde"] }
serde_json = "1.0.56"
failure = "0.1.1"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]
