[package]
name = "escher-rs"
version = "0.1.0"
authors = ["Luiz Parreira <luiz@bipa.app>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "escher"

[dependencies]
serde_json = "1.0.56"
failure = "0.1.1"

[dependencies.reqwest]
version = "0.10.10"
features = ["json"]

[dependencies.chrono]
version = "0.4.11"
features = ["serde"]

[dependencies.serde]
version = "1.0.115"
features = ["derive"]
